samples/_failures_safe/1761645976_cf9a90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ede6ac4f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ede6ac4f.c:133:21: error: expected expression at end of input
  133 |                     if (new_dist < dist[v] &&
      |                     ^~
./samples/SAFE/__tmp_ede6ac4f.c:133:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ede6ac4f.c:133:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ede6ac4f.c:133:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ede6ac4f.c:133:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ede6ac4f.c:133:21: error: expected declaration or statement at end of input
